tests/errors/macro/macro_unclosed_string/in_string.c
char a[10] = "1234567890;	// newline в константе

int main()
{
	return 0;
}
